--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <title>Jojo Story</title>
@@ -10,16 +10,16 @@
 
 <body>
 
-    <div id="IDSidenav" class="sidenav">
+    <div class="sidenav">
         <a href="javascript:void(0)" class="croix">&times;</a>
         <a href="#creation">Création</a>
-        <hr class="line-menu">
+        <div class="div-line"></div>
         <a href="#presentation">Présentation</a>
-        <hr class="line-menu">
+        <div class="div-line"></div>
         <div class="menu-deroulant">
             <a href="#protagonistes">Protagonistes</a>
             <div class="deroule-contenu">
-                <a href="#">Jonathan</a>
+                <a href="Jonathan.html">Jonathan</a>
                 <a href="#">Joseph</a>
                 <a href="#">Jotaro</a>
                 <a href="#">Josuke</a>
@@ -29,11 +29,50 @@
                 <a href="#">Josefumi</a>
             </div>
         </div>
-        <hr class="line-menu">
+        <div class="div-line"></div>
         <a href="#sites">Sites</a>
-        <hr class="line-menu">
-        <a href="mention.html" target="_blank">Mentions légales</a>
-        <hr class="line-menu">
+        <div class="div-line"></div>
+        <a class="contact">Contact</a>
+        <div id="change-js2" class="contact-block">
+
+            <div class="contact-contenu">
+                <div class="close2">&times;</div>
+                <h2 class="mentionH2">Nous contacter</h2>
+                <div class="formulaire" onsubmit="ok()">
+                    <p class="nom">Nom</p>
+                    <input type="text" name="name" class="name">
+                    <p class="mail">Adresse email</p>
+                    <input type="email" name="email" class="email">
+                    <p class="message">Message</p>
+                    <input type="text" name="msg" class="msg">
+
+                    <div class="envoi" onclick="verif()">
+                        <p>Envoyer</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="div-line"></div>
+        <a class="mention">Mentions légales</a>
+        <div class="div-line"></div>
+        <div id="change-js" class="mention-block">
+
+            <div class="mention-contenu">
+                <div class="close">&times;</div>
+                <h2 class="mentionH2">Mentions légales</h2>
+                <p>Responsable : Campistron Lucas</p>
+                <p>Adresse postale : 5 rue Maurice Ravel Herblay 95220
+                </p>
+                <p>Email : Lucascampistron95@gmail.com
+                </p>
+                <p>Téléphone : 0601142164
+                </p>
+                <p>Hébergeur : www.jojo-story.fr</p>
+                <p class="projet">Site Web créé dans le cadre d'un projet scolaire de l'IIM</p>
+            </div>
+
+        </div>
 
     </div>
 
@@ -42,71 +81,81 @@
         <!--creation dun triangle avec propriete css-->
     </div>
 
-
-    <div id="title">
+    <div id="space">
         <div class="title-block">
+
             <p class="txt-title">JOJO STORY</p>
             <hr class="underline-title">
-        </div>
-    </div>
 
-    <div id="space">
+        </div>
 
         <div id="creation">
             <h1 class="creation-title">Création</h1>
             <p class="creation-txt"><img class="araki" src="img/araki.png" alt="HirohikoAraki Piture">Jojo's Bizarre
-                Adventure est un manga d'action/aventure/fantastique de type shonen et seinen réalisé par Hirohiko Araki
-                et a été prépublié entre 1986 et 2004 dans l'hebdomadaire Weekly Shonen Jump. Il possède actuellement
-                126 volumes (sortis au Japon) et est toujours en cours de parution. La version animée produit par le
-                studio A.P.P.P était d'abord une série d'OAV de treize épisodes retraçant la 3ème partie du manga. En
-                octobre 2012 une nouvelle version animé est adapté par le studio David Production, c'est cette
-                adaptation qui donnera le gros succès au manga à l'international et qui mènera à l'adaptation en animé
-                complète jusqu'à la partie 5. La série à laissé depuis le début de sa parution une empreinte dans la
-                culture populaire, inspirant nombre d'artistes et laissant une ribambelle de phrases cultes et
-                références à travers tout média. Depuis sa première parution en 1987 et jusqu'à nos jours, JoJo's
-                Bizarre Adventure est une référence indéniable du manga en général. Son adaptation anime est resté dans
-                la mémoire via son univers décalé et spécial. Nombre d'artistes se sont revendiqué avoir été fortement
-                influencé par Araki. Parmis les œuvres les plus influencées, on peut noter Yu Yu Akusho, Yu Gi Oh,
-                Persona... De nombreux moments de l'adaptation animé, sont depuis rentrés dans l'imaginaire populaire
-                comme des répliques cultes. "Za Warudo" et "Kono Dio da !" de Dio, To Be Continued, les fameuses poses
-                inspirées des photos de mode, les différents thèmes musicaux... Beaucoup de ces moments, et d'autres, se
-                sont très fortement impregné de la culture du meme sur internet ce qui a énormément contribué à sa
-                popularité. </p>
+                Adventure est un manga d'action/aventure/fantastique de type shonen et seinen réalisé par Hirohiko
+                Araki. Il possède actuellement 126 volumes et est toujours en cours de parution. En octobre 2012 une
+                version animé est adapté par le studio David Production, c'est cette adaptation qui donnera le grand
+                succès au manga à l'international. La série a laissée depuis le début de sa parution une empreinte dans
+                la culture populaire, inspirant nombre d'artistes et laissant une ribambelle de phrases cultes et
+                références à travers tous les médias ce qui fait de JoJo's Bizarre Adventure une référence indéniable du
+                manga. Nombre d'artistes se sont revendiqués avoir été fortement influencés par Araki. Parmis les œuvres
+                les plus influencées, on peut noter Yu Yu Akusho, Yu Gi Oh, Persona... De nombreux moments de
+                l'adaptation animé, sont depuis rentrés dans l'imaginaire populaire comme des répliques cultes. "Za
+                Warudo" et "Kono Dio da !" de Dio, To Be Continued, les fameuses « jojoposes »... Et ces moments se sont
+                très fortement impregnés de la culture du meme sur internet ce qui a énormément contribué à sa
+                popularité.</p>
         </div>
 
         <hr class="line">
 
         <div id="presentation">
             <h1 class="presentation-title">Présentation</h1>
-            <div class="slider">
-                <img src="img/do_do.png" class="dodo1" alt="sign picture">
+            <div class="slider-container">
 
-                <img id="family" src="img/jojo-family1.jpg" alt="All part Jojo-2">
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <img src="img/jojo-family1.jpg" style="width:100%" alt="jojo-family 1">
+                </div>
 
-                <img src="img/do_do2.png" class="dodo2" alt="sign picture">
+                <div class="mySlides fade">
+                    <img src="img/jojo-family2.jpg" style="width:100%" alt="jojo-family 2">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/jojo-family3.jpg" style="width:100%" alt="jojo-family 3">
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <div class="rond" onclick="currentSlide(1)"></div>
+                <div class="rond" onclick="currentSlide(2)"></div>
+                <div class="rond" onclick="currentSlide(3)"></div>
             </div>
 
-            <p class="presentation-txt">L'histoire de JoJo's Bizarre Adventure tourne autour des aventures de la lignée
-                Joestar, une famille issue de l'Angleterre victorienne mais elle commence plus précisement avec la
-                relation mortelle entre Dio Brando, fils adoptif d'un bienveillant noble et Jonathan Joestar, son
-                héritier principal et donc rival de Dio qui sont les protagonistes et antagonistes principaux de la
-                première partie. La série couvre plusieurs générations, et chaque partie propose de suivre un descendant
+            <p class="presentation-txt">L'histoire de JoJo's Bizarre Adventure raconte les aventures de la lignée
+                Joestar, une famille issue de l'Angleterre victorienne. L’histoire commence avec la première partie
+                racontant la relation mortelle entre Dio Brando et Jonathan Joestar, fils de famille noble qui deviendra
+                rival de Dio. La série couvre plusieurs générations, et chaque partie propose de suivre un descendant
                 des Joestar comme protagoniste principal, entouré de nombreux personnages qui seront appelés les
-                "Jojobros". Les six premières parties suivent une même ligne temporelle et se suivent les unes des
-                autres, tandis que les parties 7 et 8 se déroulent dans un autre univers, sans lien avec les parties
-                précédentes. Tout au long de l'histoire les différents protagonistes des parties seront ammené à
+                "Jojobros". Tout au long de l'histoire les différents protagonistes des parties seront amenés à
                 affronter des ennemis en utilisant des pouvoirs très spéciaux et différents comme les très célèbres
-                "stands" ce qui amènera à des combats plus axés sur la tactique et l'ingéniosité que sur la simple force
-                brute. </p>
+                "stands" ce qui donnera des combats plus axés sur la tactique et l'ingéniosité que sur la simple force
+                brute.</p>
         </div>
 
         <hr class="line">
 
         <div id="protagonistes">
             <h1 class="protagoniste-title">Protagonistes</h1>
-            <div class="container-portagoniste">
+            <div class="container-protagoniste">
                 <figure class="figure-protagoniste">
-                    <a href="construct.html" class="aconstruct" target="_blank"><img src="img/Jonathan-rond.png"
+                    <a href="Jonathan.htmlhtml" class="aconstruct" target="_blank"><img src="img/Jonathan-rond.png"
                             alt="Jonathan Joestar head" class="protagoniste-img">
                         <figcaption class="figcaption-protagoniste">Jonathan</figcaption>
                     </a>
@@ -132,22 +181,22 @@
             </div>
             <br />
             <br />
-            <div class="container-portagoniste">
+            <div class="container-protagoniste">
                 <figure class="figure-protagoniste">
                     <a href="construct.html" class="aconstruct" target="_blank"><img src="img/Giorno-rond.png"
-                            alt="Jonathan Joestar head" class="protagoniste-img">
+                            alt="Giorno Giovanna head" class="protagoniste-img">
                         <figcaption class="figcaption-protagoniste">Giorno</figcaption>
                     </a>
                 </figure>
                 <figure class="figure-protagoniste">
                     <a href="construct.html" class="aconstruct" target="_blank"><img src="img/Jolyne-rond.png"
-                            alt="Joseph Joestar head" class="protagoniste-img">
+                            alt="Jolyne Kujo head" class="protagoniste-img">
                         <figcaption class="figcaption-protagoniste">Jolyne</figcaption>
                     </a>
                 </figure>
                 <figure class="figure-protagoniste">
                     <a href="construct.html" class="aconstruct" target="_blank"><img src="img/Johnny-rond.png"
-                            alt="Jotaro Kujo Joestar head" class="protagoniste-img">
+                            alt="Johnny Joestar head" class="protagoniste-img">
                         <figcaption class="figcaption-protagoniste">Johnny</figcaption>
                     </a>
                 </figure>
