--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Jojo Story</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
@@ -44,7 +45,7 @@
                     <p class="mail">Adresse email</p>
                     <input type="email" name="email" class="email">
                     <p class="message">Message</p>
-                    <input type="text" name="msg" class="msg">
+                    <textarea class="msg" name="message"> </textarea>
 
                     <div class="envoi" onclick="verif()">
                         <p>Envoyer</p>
